feat: completed header and explore sections of the home page

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,4 +6,5 @@
 @import './utility/margins-and-paddings';
 @import './utility/basic';
 
-@import './components/map'
+@import './components/map';
+@import './components/home';
