--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,12 +1,31 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+h1,
+h2 {
+  font-family: "Exo", sans-serif;
+}
+
+* {
+  font-family: "Lato", sans-serif;
+}
+
 html {
   font-size: 10px;
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  background-color: #E0DFDF;
+  color: #070707;
 }
 
 .map {
   overflow-x: auto;
   width: 100%;
   max-width: 80rem;
-  height: 70vh;
+  height: 80vh;
+  box-shadow: 0 0 3rem rgba(0, 0, 0, 0.5);
   border-radius: 2rem;
   max-height: 80rem;
 }
@@ -19,6 +38,128 @@ html {
 }
 .map-inner-img {
   width: 100%;
+}
+
+.home-map {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
+.home-explore {
+  position: relative;
+  width: 85%;
+  padding: 3rem 3rem 10rem 3rem;
+  margin: 10rem auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 3rem;
+}
+.home-explore-right {
+  margin: 0 10rem 0 0;
+  max-width: 50rem;
+}
+.home-explore-right-imgs {
+  height: 30rem;
+  position: relative;
+  display: flex;
+  width: 100%;
+}
+.home-explore-right-imgs img {
+  border-radius: 1rem;
+  box-shadow: 0 0 10rem rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  transform: translate(-50%, 0%);
+  position: absolute;
+  width: 24rem;
+  transition: all 0.3s;
+}
+.home-explore-right-imgs img:first-child {
+  left: 50%;
+  z-index: 5;
+  top: 20%;
+}
+.home-explore-right-imgs img:nth-child(2) {
+  left: 30%;
+  top: 10%;
+}
+.home-explore-right-imgs img:nth-child(3) {
+  left: 80%;
+  top: 10%;
+}
+.home-explore-right-imgs img:hover {
+  z-index: 5;
+  transform: translate(-50%, 0) scale(1.4);
+  z-index: 20;
+  backdrop-filter: blur(40px);
+}
+.home-explore-right-imgs img:nth-child(4) {
+  left: 30%;
+  top: 70%;
+}
+.home-explore-right-imgs img:nth-child(5) {
+  left: 85%;
+  top: 60%;
+}
+.home-explore-header {
+  top: 0;
+  right: 0;
+  z-index: 10;
+  transform: rotate(45deg) translate(10%, -100%);
+  background-image: linear-gradient(to right, #D8097E, #8C579C, #24468E);
+  width: 12rem;
+  position: absolute;
+  padding: 1rem;
+  font-size: 3rem;
+  color: #E0DFDF;
+}
+.home-explore-paragraph {
+  font-size: 1.6rem;
+}
+.home-header {
+  margin: 0 0 10rem;
+  clip-path: polygon(0% 0%, 10% 10%, 0% 50%, 0% 100%, 10% 70%, 20% 100%, 80% 100%, 90% 70%, 100% 100%, 100% 50%, 90% 10%, 100% 0%);
+  position: relative;
+  height: 80vh;
+  color: #E0DFDF;
+  background-image: linear-gradient(to right, #0052d4, #4364f7, #6fb1fc);
+}
+.home-header-main {
+  font-size: 3.5rem;
+}
+.home-header-name {
+  background-image: linear-gradient(to right, #D8097E, #8C579C, #24468E);
+}
+.home-header-button {
+  display: flex;
+  justify-content: space-between;
+  width: 8rem;
+  align-items: center;
+  margin: 3rem 0;
+  cursor: pointer;
+  transition: all 0.2s;
+  box-shadow: 0 0 1rem 0.2rem rgba(0, 0, 0, 0.5);
+  font-size: 1.5rem;
+  border-radius: 1.5rem;
+  padding: 1rem;
+  background-image: linear-gradient(to right, #D8097E, #8C579C, #24468E);
+}
+.home-header-button:hover {
+  transform: scale(1.05);
+}
+.home-header-paragraph {
+  font-size: 1.6rem;
+}
+.home-header-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  max-width: 40rem;
 }
 
 /*# sourceMappingURL=index.css.map */
