--- a/src/sass/components/_map.scss
+++ b/src/sass/components/_map.scss
@@ -2,7 +2,9 @@
     overflow-x: auto;
     width: 100%;
     max-width: 80rem;
-    height: 70vh;
+    height: 80vh;
+    
+    box-shadow: 0 0 3rem rgba(0, 0, 0, 0.5);
     border-radius: 2rem;
     &::-webkit-scrollbar{
         display: none !important;
