--- a/src/sass/utility/_basic.scss
+++ b/src/sass/utility/_basic.scss
@@ -1,3 +1,9 @@
 html {
     font-size: 10px;
+    scroll-behavior: smooth;
+}
+body {
+    margin: 0;
+    background-color: $secondary;
+    color:$primary;
 }
