feat: added covid safety guidelines and footer

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -161,5 +161,138 @@ body {
   width: 80%;
   max-width: 40rem;
 }
+.home-safety {
+  clip-path: polygon(20% 0%, 0% 20%, 0 100%, 100% 100%, 100% 20%, 80% 0%, 80% 20%, 70% 0%, 30% 0%, 20% 20%);
+  background-image: linear-gradient(to right, #12af6e, #0f3443);
+  text-align: center;
+  margin-bottom: 10rem;
+  padding: 5rem 5rem 10rem;
+}
+.home-safety-header {
+  font-size: 4rem;
+  color: #fff;
+  background-image: linear-gradient(to right, #D8097E, #8C579C, #24468E);
+  display: inline-block;
+  margin: 0 auto;
+  padding: 1rem;
+  border-radius: 2rem;
+}
+.home-safety-container {
+  margin: 10rem 0 4rem 0;
+  display: flex;
+  grid-gap: 2rem;
+  align-items: center;
+  justify-content: space-between;
+}
+.home-safety-card {
+  width: 30rem;
+  perspective: 1000px;
+  position: relative;
+  backface-visibility: hidden;
+  height: 40rem;
+  border-radius: 2rem;
+}
+.home-safety-card:nth-child(1) .home-safety-card-front {
+  background-color: #004DDD;
+}
+.home-safety-card:nth-child(1) .home-safety-card-back {
+  background-color: #004DDD;
+}
+.home-safety-card:nth-child(2) .home-safety-card-front {
+  background-color: #674BAD;
+}
+.home-safety-card:nth-child(2) .home-safety-card-back {
+  background-color: #674BAD;
+}
+.home-safety-card:nth-child(3) .home-safety-card-front {
+  background-color: #8D0549;
+}
+.home-safety-card:nth-child(3) .home-safety-card-back {
+  background-color: #8D0549;
+}
+.home-safety-card-front {
+  position: absolute;
+  box-shadow: 0 0 3rem rgba(0, 0, 0, 0.8);
+  width: 100%;
+  backface-visibility: hidden;
+  border-radius: 2rem;
+  height: 100%;
+  display: flex;
+  box-shadow: 0 0 3rem rgba(0, 0, 0, 0.2);
+  justify-content: center;
+  align-items: center;
+  transition: all 1s;
+  perspective: 1000px;
+}
+.home-safety-card-front-img {
+  width: 60%;
+}
+.home-safety-card:hover .home-safety-card-front {
+  transform: rotateY(180deg);
+}
+.home-safety-card:hover .home-safety-card-back {
+  transform: rotateY(0deg);
+}
+.home-safety-card-back {
+  position: absolute;
+  box-shadow: 0 0 3rem rgba(0, 0, 0, 0.8);
+  width: 100%;
+  backface-visibility: hidden;
+  border-radius: 2rem;
+  height: 100%;
+  display: flex;
+  transform: rotateY(-180deg);
+  box-shadow: 0 0 3rem rgba(0, 0, 0, 0.2);
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  flex-direction: column;
+  transition: all 1s;
+  perspective: 1000px;
+  box-shadow: 0 0 3rem rgba(0, 0, 0, 0.2);
+}
+.home-safety-card-back-header {
+  font-size: 2rem;
+}
+.home-safety-card-back-paragraph {
+  font-size: 1.6rem;
+}
+.home-safety-card-back-flexbox {
+  width: 80%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: left;
+}
+
+.footer {
+  color: #E0DFDF;
+  background-image: linear-gradient(to right, #0052d4, #4364f7, #6fb1fc);
+  height: 11rem;
+  padding: 3rem 0 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer h3 {
+  font-size: 1.8rem;
+}
+.footer-links {
+  cursor: pointer;
+  display: flex;
+  width: 80%;
+  align-items: center;
+  max-width: 30rem;
+  justify-content: space-between;
+}
+.footer-links img {
+  transition: all 0.2s;
+  height: 3rem;
+}
+.footer-links img:hover {
+  transform: scale(1.2);
+}
 
 /*# sourceMappingURL=index.css.map */
