--- a/public/css/index.css
+++ b/public/css/index.css
@@ -19,6 +19,19 @@ body {
   background-color: #E0DFDF;
   color: #070707;
 }
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 1rem;
+}
+body::-webkit-scrollbar {
+  width: 1.2rem;
+  background-color: #E0DFDF;
+}
+body::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-image: linear-gradient(to right top, #0052d4, #4364f7, #6fb1fc);
+  border-radius: 1rem;
+}
 
 .map {
   overflow-x: auto;
@@ -293,6 +306,70 @@ body {
 }
 .footer-links img:hover {
   transform: scale(1.2);
+}
+
+.navbar-checkbox {
+  display: none;
+}
+.navbar-checkbox:checked ~ .navbar-menu {
+  padding: 1rem 1rem 0;
+  height: 17rem;
+}
+.navbar-checkbox:checked ~ .navbar-menu .navbar-menu-inner {
+  overflow: visible;
+  height: 13rem;
+}
+.navbar-menu {
+  overflow: hidden;
+  cursor: pointer;
+  bottom: 2rem;
+  display: flex;
+  flex-direction: column-reverse;
+  transition: all 0.2s;
+  width: 2rem;
+  left: 2rem;
+  z-index: 20;
+  height: 2.2rem;
+  background-color: #070707;
+  padding: 2rem 1rem;
+  padding-bottom: 0;
+  border-radius: 1.5rem;
+  position: fixed;
+}
+.navbar-menu-inner {
+  height: 0;
+  overflow: hidden;
+  transition: all 0.2s;
+}
+.navbar-menu-inner * {
+  margin: 1rem 0;
+}
+.navbar-menu-each {
+  position: relative;
+}
+.navbar-menu-each:hover p {
+  opacity: 1;
+  transition-delay: 1s;
+}
+.navbar-menu-each-tips {
+  bottom: 17rem;
+  transform: translate(0%, -100%);
+  left: 1rem;
+  color: #E0DFDF;
+  padding: 1rem;
+  font-size: 1.3rem;
+  opacity: 0;
+  width: 7.5rem;
+  border-radius: 1rem;
+  background-color: #070707;
+  z-index: 30;
+  position: fixed;
+}
+.navbar-menu-label {
+  z-index: 40;
+  margin-top: 1.5rem;
+  padding-bottom: 1rem;
+  background-color: #070707;
 }
 
 /*# sourceMappingURL=index.css.map */
