--- a/public/css/index.css
+++ b/public/css/index.css
@@ -346,6 +346,7 @@ body::-webkit-scrollbar-thumb {
 }
 .navbar-menu-each {
   position: relative;
+  cursor: pointer;
 }
 .navbar-menu-each:hover p {
   opacity: 1;
@@ -370,6 +371,349 @@ body::-webkit-scrollbar-thumb {
   margin-top: 1.5rem;
   padding-bottom: 1rem;
   background-color: #070707;
+}
+
+.about-header {
+  overflow: hidden;
+  height: 100vh;
+  position: relative;
+}
+.about-header-container {
+  height: 100%;
+  width: 100%;
+  z-index: 2;
+  background-image: linear-gradient(to right bottom, #141e30, #243b55, #243b55 60%, transparent 60%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about-header-button {
+  font-size: 2rem;
+  align-items: center;
+  width: 15rem;
+  margin-top: 4rem;
+  border-radius: 2rem;
+  padding: 0.5rem 1rem;
+  background-color: #243b55;
+  cursor: pointer;
+  justify-content: space-between;
+  display: flex;
+}
+.about-header-main {
+  border-radius: 1.5rem;
+  padding: 2rem;
+  color: #E0DFDF;
+  background-color: rgba(20, 30, 48, 0.7);
+  width: 100%;
+  max-width: 60rem;
+}
+.about-header-main-header {
+  font-size: 3rem;
+}
+.about-header-main-content {
+  font-size: 2rem;
+}
+.about-header-video {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+.about-modals-inputs {
+  display: none;
+}
+.about-modals-indian {
+  background-image: linear-gradient(to top right, #d5891e, rgba(213, 137, 30, 0.6)), url("../img/indian-food.jpg");
+  background-size: cover;
+}
+.about-modals-korean {
+  background-image: linear-gradient(to top right, #1e66d5, rgba(30, 102, 213, 0.7)), url("../img/korean-food.jpg");
+  background-size: cover;
+}
+.about-modals-caribbean {
+  background-size: cover;
+  background-image: linear-gradient(to top right, #521ed5, rgba(82, 30, 213, 0.6)), url("../img/caribbean food.jpg");
+}
+.about-modals-chinese {
+  background-size: cover;
+  background-image: linear-gradient(to top right, #ff2500, rgba(255, 37, 0, 0.3)), url("../img/chinese-food.jpg");
+}
+.about-modals-inputs-indian:checked ~ .about-modals-indian {
+  transform: translate(-50%, -50%);
+}
+.about-modals-inputs-chinese:checked ~ .about-modals-chinese {
+  transform: translate(-50%, -50%);
+}
+.about-modals-inputs-korean:checked ~ .about-modals-korean {
+  transform: translate(-50%, -50%);
+}
+.about-modals-inputs-caribbean:checked ~ .about-modals-caribbean {
+  transform: translate(-50%, -50%);
+}
+.about-modals-each {
+  border-radius: 2rem;
+  font-size: 1.6rem;
+  color: #E0DFDF;
+  padding: 4rem 4rem;
+  top: 50%;
+  left: 50%;
+  transition: all 0.5s;
+  transform: translate(-50%, -200vh);
+  z-index: 50;
+  position: fixed;
+}
+.about-modals-each-close {
+  position: absolute;
+  top: -3rem;
+  right: -2rem;
+  cursor: pointer;
+  transition: all 0.2s;
+  width: 3rem;
+}
+.about-modals-each-close:hover {
+  transform: scale(1.1);
+}
+.about-modals-each-container {
+  position: relative;
+}
+.about-modals-each-imgs {
+  display: flex;
+  width: 100%;
+  margin-top: 4rem;
+  justify-content: space-between;
+}
+.about-modals-each-imgs img {
+  border-radius: 2rem;
+  height: 10rem;
+}
+.about-donations {
+  border-radius: 2rem;
+  box-shadow: 0 0 2rem rgba(0, 0, 0, 0.1);
+  width: 90%;
+  margin: 8rem auto;
+  padding: 2rem 4rem;
+}
+.about-donations-container {
+  display: flex;
+  justify-content: space-between;
+}
+.about-donations-container-paragraph {
+  font-size: 2rem;
+  width: 40%;
+}
+.about-donations-container-stats {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 3rem;
+}
+.about-donations-container-stats-each {
+  color: #E0DFDF;
+  background-image: linear-gradient(to top right, #16bffd, #cb3066);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 15rem;
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+  box-shadow: 0 0 2rem rgba(0, 0, 0, 0.3);
+}
+.about-donations-container-stats-each-stat {
+  margin: 2rem auto;
+  font-size: 2rem;
+  font-weight: 900;
+}
+.about-donations-container-stats-each-header {
+  font-weight: 500;
+  margin: 2rem auto 0;
+  font-size: 1.2rem;
+}
+.about-donations-header {
+  font-size: 2.4rem;
+}
+.about-cuisines {
+  color: #E0DFDF;
+  padding: 4rem;
+  background-image: linear-gradient(to right, #ff4b1f, #ff9068);
+}
+.about-cuisines-header {
+  font-size: 3rem;
+}
+.about-cuisines-container {
+  display: flex;
+  justify-content: space-between;
+}
+.about-cuisines-container-each {
+  border-radius: 1.5rem;
+  padding: 2rem;
+  width: 20%;
+}
+.about-cuisines-container-each-name {
+  font-size: 2.5rem;
+}
+.about-cuisines-container-each-paragraph {
+  font-size: 1.6rem;
+}
+.about-cuisines-container-each-button {
+  border-radius: 1rem;
+  padding: 1rem;
+  background-image: linear-gradient(to right, #D8097E, #8C579C, #24468E);
+  font-size: 2rem;
+  display: inline-block;
+  margin: 2rem auto;
+  cursor: pointer;
+}
+.about-cuisines-container-each:first-child {
+  background-size: cover;
+  background-image: linear-gradient(to top right, #d5891e, rgba(213, 137, 30, 0.6)), url("../img/indian-food.jpg");
+}
+.about-cuisines-container-each:nth-child(2) {
+  background-size: cover;
+  background-image: linear-gradient(to top right, #ff2500, rgba(255, 37, 0, 0.3)), url("../img/chinese-food.jpg");
+}
+.about-cuisines-container-each:nth-child(3) {
+  background-size: cover;
+  background-image: linear-gradient(to top right, #521ed5, rgba(82, 30, 213, 0.6)), url("../img/caribbean food.jpg");
+}
+.about-cuisines-container-each:nth-child(4) {
+  background-size: cover;
+  background-image: linear-gradient(to top right, #1e66d5, rgba(30, 102, 213, 0.7)), url("../img/korean-food.jpg");
+}
+.about-testimonials {
+  border-radius: 2rem;
+  box-shadow: 0 0 2rem rgba(0, 0, 0, 0.1);
+  width: 90%;
+  margin: 8rem auto;
+  padding: 2rem 4rem;
+}
+.about-testimonials-each {
+  border: 0.5px solid #aeafae;
+  color: #E0DFDF;
+  padding: 1rem 2rem 7rem;
+  border-radius: 1.5rem 1.5rem 1.5rem 0rem;
+  clip-path: polygon(0% 0%, 0 100%, 10% 90%, 100% 90%, 100% 0%);
+}
+.about-testimonials-each:first-child {
+  background-image: linear-gradient(to top right, #0052d4, #4364f7, #6fb1fc);
+}
+.about-testimonials-each:nth-child(2) {
+  background-image: linear-gradient(to top right, #2c3e50, #fd746c);
+}
+.about-testimonials-each:nth-child(3) {
+  background-image: linear-gradient(to top right, #e96443, #904e95);
+}
+.about-testimonials-each:nth-child(4) {
+  background-image: linear-gradient(to top right, #0b486b, #f56217);
+}
+.about-testimonials-each-content {
+  font-size: 1.6rem;
+}
+.about-testimonials-each-author {
+  display: flex;
+  width: 100%;
+  max-width: 20rem;
+  justify-content: center;
+  align-items: center;
+}
+.about-testimonials-each-author-img {
+  margin-right: 1rem;
+  border-radius: 100%;
+  width: 5rem;
+}
+.about-testimonials-each-author-name {
+  font-size: 1.6rem;
+}
+.about-testimonials-container {
+  grid-gap: 4rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.about-testimonials-header {
+  font-size: 2.7rem;
+  margin-bottom: 4rem;
+}
+
+.book-checkbox {
+  display: none;
+}
+.book-checkbox:checked ~ .book-container {
+  transform: translate(-50%, -50%);
+}
+.book-checkbox:checked ~ .book-background {
+  transform: translate(0, 0);
+}
+.book-background {
+  position: fixed;
+  top: 0%;
+  z-index: 110;
+  left: 0%;
+  width: 100%;
+  transform: translateY(-200vw);
+  transition: all 0.2s;
+  backdrop-filter: blur(0.3rem);
+  background-color: rgba(225, 225, 225, 0.5);
+  height: 100%;
+}
+.book-container {
+  position: fixed;
+  top: 50%;
+  color: #E0DFDF;
+  left: 50%;
+  width: 60vw;
+  border-radius: 2rem;
+  padding: 4rem;
+  transition: all 0.6s;
+  height: 36rem;
+  z-index: 120;
+  transform: translate(-50%, -200vh);
+  background-image: linear-gradient(to right, #360033, #0b8793);
+}
+.book-container-container {
+  position: relative;
+}
+.book-container-header {
+  margin: 0 0 3rem 0;
+  font-size: 2.5rem;
+}
+.book-container-inner-next {
+  text-transform: capitalize;
+  padding: 1rem;
+  font-size: 2rem;
+  margin: 3rem 0;
+  outline: none;
+  cursor: pointer;
+  border: none;
+  width: 10rem;
+  color: white;
+  border-radius: 1rem;
+  background-color: #000;
+}
+.book-container-inner-packages {
+  display: flex;
+}
+.book-container-inner-packages-input {
+  display: none;
+}
+.book-container-inner-packages-basic:checked ~ .book-container-inner-packages-each:nth-child(4) {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.book-container-inner-packages-premium:checked ~ .book-container-inner-packages-each:nth-child(5) {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.book-container-inner-packages-luxurious:checked ~ .book-container-inner-packages-each:nth-child(6) {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.book-container-inner-packages-each {
+  cursor: pointer;
+  transition: all 0.2s;
+  border-radius: 1.5rem;
+  padding: 2rem;
+}
+.book-container-inner-packages-each:last-child {
+  margin-right: 0;
+}
+.book-container-inner-packages-each-para {
+  font-size: 1.5rem;
 }
 
 /*# sourceMappingURL=index.css.map */
