--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,4 +9,6 @@
 @import './components/map';
 @import './components/home';
 @import './components/footer';
-@import './components/navigation'
+@import './components/navigation';
+@import './components/about';
+@import './components/book';
