--- a/public/css/index.css
+++ b/public/css/index.css
@@ -174,8 +174,42 @@ body::-webkit-scrollbar-thumb {
   width: 80%;
   max-width: 40rem;
 }
+.home-about {
+  color: #E0DFDF;
+  background-image: linear-gradient(90deg, #ff1b6b 0%, #45caff 100%);
+  padding: 2rem;
+  border-radius: 2rem;
+  box-shadow: 0 0 10rem rgba(0, 0, 0, 0.8);
+  width: 80%;
+  margin: 10rem auto;
+  font-size: 1.6rem;
+}
+.home-about-map {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5rem auto;
+}
+.home-about-map * {
+  width: 100% !important;
+  max-width: 100vw !important;
+}
+.home-about-container {
+  display: flex;
+  align-items: flex-start;
+}
+.home-about-header {
+  font-size: 3rem;
+}
+.home-about-left {
+  width: 50%;
+}
+.home-about-right {
+  margin-left: 4rem;
+  width: 50%;
+}
 .home-safety {
-  clip-path: polygon(20% 0%, 0% 20%, 0 100%, 100% 100%, 100% 20%, 80% 0%, 80% 20%, 70% 0%, 30% 0%, 20% 20%);
   background-image: linear-gradient(to right, #12af6e, #0f3443);
   text-align: center;
   margin-bottom: 10rem;
