--- a/public/css/index.css
+++ b/public/css/index.css
@@ -177,7 +177,7 @@ body::-webkit-scrollbar-thumb {
 .home-about {
   color: #E0DFDF;
   background-image: linear-gradient(90deg, #ff1b6b 0%, #45caff 100%);
-  padding: 2rem;
+  padding: 3rem;
   border-radius: 2rem;
   box-shadow: 0 0 10rem rgba(0, 0, 0, 0.8);
   width: 80%;
@@ -191,9 +191,9 @@ body::-webkit-scrollbar-thumb {
   align-items: center;
   margin: 5rem auto;
 }
-.home-about-map * {
-  width: 100% !important;
-  max-width: 100vw !important;
+.home-about-map .map {
+  margin: 0 auto !important;
+  width: 80% !important;
 }
 .home-about-container {
   display: flex;
@@ -208,6 +208,18 @@ body::-webkit-scrollbar-thumb {
 .home-about-right {
   margin-left: 4rem;
   width: 50%;
+}
+.home-news {
+  width: 80%;
+  padding: 4rem;
+  font-size: 1.6rem;
+  border-radius: 1rem;
+  box-shadow: 0 0 10rem rgba(0, 0, 0, 0.8);
+  margin: 10rem auto;
+}
+.home-news-header {
+  margin-top: 1rem;
+  font-size: 3rem;
 }
 .home-safety {
   background-image: linear-gradient(to right, #12af6e, #0f3443);
@@ -697,7 +709,7 @@ body::-webkit-scrollbar-thumb {
   border-radius: 2rem;
   padding: 4rem;
   transition: all 0.6s;
-  height: 36rem;
+  min-height: 36rem;
   z-index: 120;
   transform: translate(-50%, -200vh);
   background-image: linear-gradient(to right, #360033, #0b8793);
@@ -710,14 +722,26 @@ body::-webkit-scrollbar-thumb {
   font-size: 2.5rem;
 }
 .book-container-inner-final {
-  font-size: 1.8rem;
+  font-size: 2rem;
   margin: 7rem 0 3rem;
+}
+.book-container-inner-final h3 {
+  font-size: 4rem;
 }
 .book-container-inner-form {
   display: grid;
   grid-gap: 6rem 4rem;
   margin: 7rem 0 3rem;
   grid-template-columns: 1fr 1fr;
+}
+.book-container-inner-form select {
+  background-color: #070707;
+  color: #E0DFDF;
+  font-size: 1.6rem;
+  padding: 1rem;
+  border: none;
+  outline: none;
+  border-radius: 1rem;
 }
 .book-container-inner-form input {
   padding: 2.5rem 1.5rem;
