--- a/src/sass/components/_book.scss
+++ b/src/sass/components/_book.scss
@@ -38,14 +38,25 @@
 
         &-inner {
             &-final{
-                font-size: 1.8rem;
+                h3{
+                    font-size: 4rem;
+                }
+                font-size: 2rem;
                 margin: 7rem 0 3rem;
             }
             &-form {
                 display: grid;
                 grid-gap: 6rem 4rem;
                 margin: 7rem 0 3rem;
-
+                select{
+                    background-color: $primary;
+                    color:$secondary;
+                    font-size: 1.6rem;
+                    padding:1rem;
+                    border:none;
+                    outline:none;
+                    border-radius: 1rem;
+                }
                 input {
                     padding: 2.5rem 1.5rem;
                     width: 80%;
@@ -166,7 +177,7 @@
         border-radius: 2rem;
         padding:4rem;
         transition: all 0.6s;
-        height: 36rem;
+        min-height: 36rem;
         z-index: 120;
         transform: translate(-50%, -200vh);
         background-image: linear-gradient(to right, #360033, #0b8793);
