--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -21,7 +21,13 @@
             width: 15rem;
             margin-top: 4rem;
             border-radius: 2rem;
-            padding: .5rem 1rem;
+            transition: all .2s;
+
+            &:hover {
+                transform: scale(1.05)
+            }
+
+            padding: .5rem 2rem;
             background-color: #243b55;
             cursor: pointer;
             justify-content: space-between;
@@ -41,7 +47,7 @@
             padding:2rem;
             color:$secondary;
             background-color: rgba(#141e30, 0.7);
-            width: 100%;
+            width: 80%;
             max-width: 60rem;
         }
 
@@ -50,7 +56,14 @@
             z-index: -1;
             top: 0;
             left: 0;
+
+            @include respond(tablet) {
+                height: 100vh;
+                width: auto;
+            }
+
             width: 100%;
+            // height: 100vh;
         }
     }
 
@@ -118,6 +131,12 @@
                 position: absolute;
                 top: -3rem;
                 right: -2rem;
+                
+                @include respond(small-tablet) {
+                    // display: block;
+                    top: -2rem;
+                    right:-1rem;
+                }
                 cursor: pointer;
                 transition: all 0.2s;
 
@@ -138,15 +157,34 @@
                 display: flex;
                 width: 100%;
                 margin-top: 4rem;
+
+                @include respond(small-tablet) {
+                    // display: block;
+                    // justify-content:
+                }
+
                 justify-content: space-between;
                 // grid-template-columns: auto auto auto ; // grid-template-rows: ;
 
                 // display: block;
                 img {
+
+                    @include respond(small-tablet) {
+                        height: 5rem;
+
+                        // width: 80;
+                        // display: block;
+                    }
+
                     border-radius: 2rem;
                     height: 10rem;
                 }
 
+            }
+
+            @include respond(small-tablet) {
+                width: 80%;
+                padding: 2rem;
             }
 
             padding: 4rem 4rem;
@@ -163,18 +201,35 @@
 
     &-donations {
         &-container {
+            @include respond(tablet) {
+                display: block;
+            }
+
             display: flex;
             justify-content: space-between;
 
             &-paragraph {
+                @include respond(tablet) {
+                    width: 100%;
+                    margin-bottom: 6rem;
+                }
+
                 font-size: 2rem;
                 width: 40%;
             }
 
             &-stats {
+                justify-content: space-between;
                 display: grid;
                 grid-template-columns: auto auto auto;
                 grid-gap: 3rem;
+
+                @include respond(small-tablet) {
+                    grid-template-columns: auto auto;
+                    grid-gap: 3rem 1rem;
+                    // display: block;
+                }
+
                 &-each {
                     &-stat {
                         // display: inline-block;
@@ -184,16 +239,30 @@
                     }
 
                     &-header {
+                        @include respond(phone) {
+
+                            font-size: 1rem;
+                            // display: block;
+                        }
+
                         font-weight: 500;
                         margin: 2rem auto 0;
                         font-size: 1.2rem;
                     }
+
                     color:$secondary;
                     background-image: linear-gradient(to top right, #16bffd, #cb3066);
                     display:flex;
                     flex-direction: column;
                     align-items: center;
                     width: 15rem;
+
+                    @include respond(phone) {
+                        width: 13rem;
+                        // grid-temp/late-columns: auto auto;
+                        // display: block;
+                    }
+
                     padding: 1rem 2rem;
                     border-radius: 1rem;
                     box-shadow: 0 0 2rem rgba(0, 0, 0, 0.3);
@@ -209,6 +278,11 @@
         box-shadow: 0 0 2rem rgba(0, 0, 0, 0.1);
         // background-color: rgba($primary, 0.3);
         width: 90%;
+
+        @include respond(tablet) {
+            padding: 2rem;
+        }
+
         margin: 8rem auto;
         padding: 2rem 4rem;
     }
@@ -267,7 +341,16 @@
                     background-image: linear-gradient(to top right, rgba(#1E66D5, 1), rgba(#1E66D5, 0.7)), url("../img/korean-food.jpg");
                 }
 
+                @include respond(small-tablet) {
+                    margin: 4rem auto;
+                    width: 80%;
+                }
+
                 width: 20%;
+            }
+
+            @include respond(small-tablet) {
+                display: block;
             }
 
             display: flex;
@@ -278,6 +361,12 @@
     &-testimonials {
         &-each {
             border: .5px solid rgba(#AEAFAE, 1);
+
+            @include respond(small-tablet) {
+                // display: block;
+                width: 80%;
+                margin: 5rem auto;
+            }
 
             &:first-child {
                 background-image: linear-gradient(to top right, #0052d4, #4364f7, #6fb1fc);
@@ -326,12 +415,21 @@
         &-container {
             grid-gap: 4rem;
             display: grid;
+
+            @include respond(small-tablet) {
+                display: block;
+            }
+
             grid-template-columns: 1fr 1fr 1fr 1fr;
         }
 
         &-header {
             font-size: 2.7rem;
             margin-bottom: 4rem;
+        }
+
+        @include respond(small-tablet) {
+            padding: 0;
         }
 
         border-radius: 2rem;
