--- a/src/sass/utility/_basic.scss
+++ b/src/sass/utility/_basic.scss
@@ -9,7 +9,11 @@ body {
     margin: 0;
     background-color: $secondary;
     color: $primary;
+    overflow-x: hidden;
+ 
+}
 
+*{
     &::-webkit-scrollbar-track {
         box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
         border-radius: 1rem;
@@ -25,4 +29,3 @@ body {
         border-radius: 1rem;
     }
 }
-
