--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -117,7 +117,8 @@
 
         &-each {
             border-radius: 2rem;
-
+            max-height: 80vh;
+            overflow-x: auto;
             &-content {
                 // display: grid;
                 // grid-template-columns: 2fr 1fr;
