--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -2,7 +2,7 @@
 
     color: $secondary;
     background-image: linear-gradient(to right, #0052d4, #4364f7, #6fb1fc);
-    height: 11rem;
+    height: 15rem;
     padding:3rem 0 5rem;
     display: flex;
     flex-direction: column;
@@ -10,11 +10,14 @@
     h3 {
         font-size: 1.8rem;
     }
-
+    &-text{
+        font-size:1.3rem;
+    }
     &-links {
         cursor: pointer;
         display:flex;
         
+        margin:2rem auto;
         width: 80%;
         align-items: center;
         max-width: 30rem;
